--- a/views/includes/property_types_dropdown.ejs
+++ b/views/includes/property_types_dropdown.ejs
@@ -1,8 +1,6 @@
 <select class="selectpicker form-control" name="property_type">
     <option value="" selected disabled>Tipul Proprietății</option>
-    <% for(let prop of propertyTypes) {
-        var selected = (prop.value) == property_type ? "selected" : "";
-    %>
-    <option value="<%=prop.value%>" <%= selected %>><%= prop.display %></option>
+    <% for(let prop of propertyTypes) { %>
+    <option value="<%=prop%>"><%= prop %></option>
     <% } %>
 </select>
