--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -21,7 +21,7 @@
                                                         <li class="nav-item"> <a class="nav-link <%= 
                                                                         path === '/inchiriere' ||  path === '/inchiriere_s' ? 
                                                                         'active' : '' %>"
-                                                                        href="/inchiriere">Inchiriere</a>
+                                                                        href="/inchirieri">Inchiriere</a>
                                                         </li>
                                                         <li class="nav-item"> <a class="nav-link <%= 
                                                                         path === '/vanzare' || path === '/vanzare_s' ? 
