--- a/views/includes/scripts.ejs
+++ b/views/includes/scripts.ejs
@@ -1,58 +1,48 @@
 <!-- jQuery first, then Popper.js, then Bootstrap JS --> 
 <!--===============================================================================================--> 
-<script src="/js/jquery-3.3.1.min.js"></script> 
-<script src="/js/greensock.js"></script> 
+<script src="/js/lib/jquery-3.3.1.min.js"></script> 
+<script src="/js/lib/greensock.js"></script> 
 <!-- LayerSlider script files --> 
-<script src="/js/layerslider.transitions.js"></script> 
-<script src="/js/layerslider.kreaturamedia.jquery.js"></script> 
+<script src="/js/lib/layerslider.transitions.js"></script> 
+<script src="/js/lib/layerslider.kreaturamedia.jquery.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/popper-1.14.3.min.js"></script> 
-<script src="/js/bootstrap-4.1.3.min.js"></script> 
-<script src="/js/bootstrap-select.min.js"></script> 
+<script src="/js/lib/popper-1.14.3.min.js"></script> 
+<script src="/js/lib/bootstrap-4.1.3.min.js"></script> 
+<script src="/js/lib/bootstrap-select.min.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/YouTubePopUp.jquery.js"></script> 
+<script src="/js/lib/YouTubePopUp.jquery.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/jquery.fancybox.pack.js"></script> 
-<script src="/js/jquery.fancybox-media.js"></script> 
+<script src="/js/lib/jquery.fancybox.pack.js"></script> 
+<script src="/js/lib/jquery.fancybox-media.js"></script> 
 <!--===============================================================================================--> 
 <!-- Owl Carousel slide need--> 
-<script src="/js/owl.js"></script> 
+<script src="/js/lib/owl.js"></script> 
 <!--===============================================================================================--> 
 <!-- Achievement Counting need--> 
-<script src="/js/nsc.js"></script> 
+<script src="/js/lib/nsc.js"></script> 
 <!--===============================================================================================--> 
 <!--tab gallery section--> 
-<script src="/js/mixitup.js"></script> 
+<script src="/js/lib/mixitup.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/wow.js"></script> 
+<script src="/js/lib/wow.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/jquery.cookie.js"></script> 
-<script src="/js/settings.js"></script> 
+<script src="/js/lib/jquery.cookie.js"></script> 
+<script src="/js/lib/settings.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/jshashtable-2.1_src.js"></script> 
+<script src="/js/lib/jshashtable-2.1_src.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/jquery.numberformatter-1.2.3.js"></script> 
+<script src="/js/lib/jquery.numberformatter-1.2.3.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/tmpl.js"></script> 
+<script src="/js/lib/tmpl.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/jquery.dependClass-0.1.js"></script> 
+<script src="/js/lib/jquery.dependClass-0.1.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/draggable-0.1.js"></script> 
+<script src="/js/lib/draggable-0.1.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/jquery.slider.js"></script> 
+<script src="/js/lib/jquery.slider.js"></script> 
 
 <!--===============================================================================================-->
   <!-- maps -->
 <!--===============================================================================================--> 
-<script src="/js/jquery.barrating.js"></script> 
+<script src="/js/lib/jquery.barrating.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/custom.js"></script> 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-106986305-1', 'auto');
-  ga('send', 'pageview');
-</script>
