--- a/views/includes/scripts.ejs
+++ b/views/includes/scripts.ejs
@@ -46,3 +46,4 @@
 <!--===============================================================================================--> 
 <script src="/js/lib/jquery.barrating.js"></script> 
 <!--===============================================================================================--> 
+<script src="/js/lib/custom.js"></script> 
