Prepare properties template to be a react app

--- a/views/pages/properties.ejs
+++ b/views/pages/properties.ejs
@@ -1,5 +1,5 @@
 <%- include('../includes/header.ejs') %>
-<link rel="stylesheet" href="/css/loading_spinner.css">
+
 </head>
 
 <body class="page-load">
@@ -180,8 +180,8 @@
     </div>
     <!-- Wrapper End -->
     <%- include('../includes/scripts.ejs') %>
-    <script src="/js/custom/properties.js"></script>
     <script src="/js/custom/sliders.js"></script>
+    <script src="/js/custom/listings/index.js"></script>
 </body>
 
 </html>
