--- a/src/public/css/nav-bar.css
+++ b/src/public/css/nav-bar.css
@@ -1,9 +1,17 @@
+.navar { 
+    font-family: 'Roboto', sans-serif;
+}
+
+.navbar-expand-lg .navbar-nav .dropdown-menu {
+    top: 60px;
+}
+
 .nav-link.active {
     color: #0e55a7 !important;
 }
 
 .main_header_1 {
-    background-color: #f1fcf7;
+    background-color: #fff;
 }
 
 #header .navbar-expand-lg .navbar-nav .nav-link:hover, #header.fixed-top.header_style_2 .navbar-expand-lg .navbar-nav .nav-link:hover{
