--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -37,3 +37,5 @@
 <!--===============================================================================================-->
 <link rel="stylesheet" href="/css/settings.css">
 <!--===============================================================================================-->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
