--- a/views/pages/properties.ejs
+++ b/views/pages/properties.ejs
@@ -20,8 +20,8 @@
             <!-- Banner Section End -->
             
             <!-- Property List Start -->
-            <section class="full_row py_80 bg_gray" id="properties-page">
-                <div class="container">
+            <section class="full_row py_80 bg_gray">
+                <div class="container" id="listings-page">
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="property_sidebar">
